[gd_scene load_steps=6 format=2]

[ext_resource path="res://按钮_标准.tscn" type="PackedScene" id=1]
[ext_resource path="res://按钮_每日.tscn" type="PackedScene" id=2]
[ext_resource path="res://按钮__自定义.tscn" type="PackedScene" id=3]
[ext_resource path="res://按钮/返回按钮.tscn" type="PackedScene" id=4]
[ext_resource path="res://开始游戏界面.gd" type="Script" id=5]

[node name="开始游戏界面" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.345098, 0.266667, 0.266667, 0.372549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -754.0
margin_right = 754.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_right = 500.0
margin_bottom = 600.0
rect_min_size = Vector2( 500, 430 )

[node name="2" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 600.0
rect_min_size = Vector2( 500, 430 )

[node name="3" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 1008.0
margin_right = 1508.0
margin_bottom = 600.0
rect_min_size = Vector2( 500, 430 )

[node name="TextureButton" parent="." instance=ExtResource( 4 )]
margin_left = 3.24236
margin_top = 880.0
margin_right = 272.242
margin_bottom = 953.0
rect_pivot_offset = Vector2( 0, 30 )

[connection signal="ok" from="HBoxContainer/1" to="." method="_on_1_ok"]
[connection signal="ok" from="HBoxContainer/2" to="." method="_on_3_ok"]
[connection signal="ok" from="HBoxContainer/3" to="." method="_on_2_ok"]
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
